--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,6 @@
        startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
        envVars:
          - key: AZURE_API_KEY
-           value: w8QOfndA9QdkISKjzwb9gOFiYtzuFrXy
+           value: /
          - key: PORT
            value: 8001
